Save audio when creating any question type